# Backend/routes/transactions-routes.js
@@ -1,0 +1,17 @@
+const express = require("express");
+
+const router = express.Router();
+const transactionsController = require("../controllers/transactionsController");
+const checkAuth = require("../middleware/check-auth");
+
+router.get("/", transactionsController.getAllTransactions);
+
+router.get("/:userid", checkAuth, transactionsController.getUserTransactions);
+
+router.post("/", checkAuth, transactionsController.addTransaction);
+
+router.patch("/:eid", checkAuth, transactionsController.updateTransaction);
+
+router.delete("/:eid", checkAuth, transactionsController.deleteTransaction);
+
+module.exports = router;
